derive-ex-tests/tests/compile_fail/compare_op/partial_eq_field_not_impl_partial_eq.rs
use derive_ex::derive_ex;

struct NotPartialEq;

#[derive_ex(PartialEq)]
struct X {
    pub x: NotPartialEq,
}

fn main() {}
