derive-ex-tests/tests/compile_fail/compare_op/partial_eq_field_not_impl_partial_eq.stderr
error[E0277]: can't compare `NotPartialEq` with `_`
 --> tests/compile_fail/compare_op/partial_eq_field_not_impl_partial_eq.rs:7:9
  |
7 |     pub x: NotPartialEq,
  |         ^ no implementation for `NotPartialEq == _`
  |
  = help: the trait `PartialEq<_>` is not implemented for `NotPartialEq`
